[metadata]
name = metabrainz-wikibye
version = attr: metabrainz-wikibye.__version__
url = https://github.com/jwflory/metabrainz-wikibye
author = Justin W. Flory
author_email = jflory7 [at] gmail [dot] com
license = BSD 3-Clause License
description = Say goodbye to your wikis! Python command-line tool to convert MusicBrainz MediaWiki pages to Markdown with pandoc
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data, wiki, mediawiki, markdown, documentation, migration, musicbrainz, metabrainz, pandoc
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires = >=3
include_package_data = True
#packages = find:
#install_requires =
#  requests
#  importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
    wikibye = metabrainz-wikibye.cli:main

[options.package_data]
* = *.txt, *.rst
