[metadata]
name = bye_wiki
version = attr: bye_wiki.__version__
url = https://github.com/jwflory/bw
author = Justin W. Flory
author_email = contact [at] jwf [dot] io
license = BSD-3-Clause
description = Say goodbye to your wikis! Python command-line script to convert MediaWiki pages to Markdown with pandoc
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data, wiki, mediawiki, markdown, documentation, migration, pandoc
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
python_requires = >=3
include_package_data = True
#packages = find:
#install_requires =
#  requests
#  importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
    bw = bye_wiki.cli:main

[options.package_data]
* = *.txt, *.rst
